--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.3",
         "@vitejs/plugin-vue": "^5.2.3",
         "floating-vue": "^5.2.2",
         "randexp": "^0.5.3",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.3",
         "typescript": "^5.8.3",
         "vite": "^6.2.5",
         "vue": "^3.5.13",
@@ -21,11 +22,9 @@
     "devDependencies": {
         "@types/chrome": "^0.0.313",
         "@typescript-eslint/eslint-plugin": "^8.29.0",
-        "autoprefixer": "^10.4.21",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-vue": "^10.0.0",
-        "postcss": "^8.5.3",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11"
     }
