--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "esModuleInterop": true,
         "allowJs": true,
         "lib": ["esnext", "dom"],
-        "types": ["@types/chrome", "vite/client"],
+        "types": ["@types/chrome", "@types/dom-navigation", "vite/client"],
         "paths": {
             "@/*": ["./src/popup/*"],
         },
