--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build && vite build --config vite-background.config.ts && vite build --config vite-content.config.ts",
-        "build.watch": "concurrently \"vite build --config vite-background.config.ts --watch\" \"vite build --config vite-content.config.ts --watch\" \"vite build --watch\"",
+        "build": "vite build && vite build --config vite-background.config.mts && vite build --config vite-content.config.mts",
+        "build.watch": "concurrently \"vite build --config vite-background.config.mts --watch\" \"vite build --config vite-content.config.mts --watch\" \"vite build --watch\"",
         "preview": "vite preview"
     },
     "dependencies": {
